# sentinelid-client-cpp

./: CMakeLists.txt  README.md
include/sentinelid/client/: device.hpp  models.hpp
src/: device.cpp
